shared/src/test/data/yeast/invalid-json/unquoted-value-seq.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'ccc'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
Indicator           9,  2,  7 ':'
WhiteSpace         10,  2,  8 ' '
BeginScalar        11,  2,  9 ''
Indicator          11,  2,  9 '\"'
Text               12,  2, 10 'hh'
Indicator          14,  2, 12 '\"'
EndScalar          15,  2, 13 ''
Indicator          15,  2, 13 ','
LineBreak          16,  2, 14 '\n'
WhiteSpace         17,  3,  0 '  '
BeginScalar        19,  3,  2 ''
Indicator          19,  3,  2 '\"'
Text               20,  3,  3 'abb'
Indicator          23,  3,  6 '\"'
EndScalar          24,  3,  7 ''
Indicator          24,  3,  7 ':'
WhiteSpace         25,  3,  8 ' '
BeginSequence      26,  3,  9 '['
Error              27,  3, 10 'invalid'
Indicator          34,  3, 17 ','
WhiteSpace         35,  3, 18 ' '
BeginScalar        36,  3, 19 ''
Text               36,  3, 19 '1'
EndScalar          37,  3, 20 ''
Indicator          37,  3, 20 ','
WhiteSpace         38,  3, 21 ' '
BeginScalar        39,  3, 22 ''
Indicator          39,  3, 22 '\"'
Text               40,  3, 23 'aa'
Indicator          42,  3, 25 '\"'
EndScalar          43,  3, 26 ''
EndSequence        43,  3, 26 ']'
Indicator          44,  3, 27 ','
LineBreak          45,  3, 28 '\n'
WhiteSpace         46,  4,  0 '  '
BeginScalar        48,  4,  2 ''
Indicator          48,  4,  2 '\"'
Text               49,  4,  3 'recover'
Indicator          56,  4, 10 '\"'
EndScalar          57,  4, 11 ''
Indicator          57,  4, 11 ':'
WhiteSpace         58,  4, 12 ' '
BeginScalar        59,  4, 13 ''
Indicator          59,  4, 13 '\"'
Text               60,  4, 14 're'
Indicator          62,  4, 16 '\"'
EndScalar          63,  4, 17 ''
LineBreak          63,  4, 17 '\n'
EndMapping         64,  5,  0 '}'